--- a/public/stylesheets/app/style.css
+++ b/public/stylesheets/app/style.css
@@ -1,8 +1,16 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: calc(100vh);
+  background: #ffffff;
 }
 
-a {
-  color: #00B7FF;
+#visitors {
+  z-index: 2;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  background: #f7fcff;
+  border-bottom: black 2px solid;
 }
