--- a/public/stylesheets/app/style.css
+++ b/public/stylesheets/app/style.css
@@ -6,11 +6,31 @@ html, body {
   background: #ffffff;
 }
 
+#menu {
+  height: 60px;
+  background: #1a73e8;
+}
+
+#title {
+  height: 60px;
+  color: #ffffff;
+  font-size: 30px;
+  margin-left: 10px;
+  line-height: 60px;
+  text-align: center;
+  display: inline-block;
+  font-family: Catamaran, serif;
+}
+
 #visitors {
   z-index: 2;
-  width: 100%;
-  height: 50px;
-  position: fixed;
-  background: #f7fcff;
-  border-bottom: black 2px solid;
+  float: right;
+  height: 60px;
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 60px;
+  margin-right: 80px;
+  text-align: center;
+  display: inline-block;
+  font-family: Roboto, serif;
 }
