--- a/public/stylesheets/app/style.css
+++ b/public/stylesheets/app/style.css
@@ -7,7 +7,10 @@ html, body {
 }
 
 #menu {
+  z-index: 2;
+  width: 100%;
   height: 60px;
+  position: absolute;
   background: #1a73e8;
 }
 
@@ -23,7 +26,6 @@ html, body {
 }
 
 #visitors {
-  z-index: 2;
   float: right;
   height: 60px;
   color: #ffffff;
